<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/iconohotel"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:padding="1dp"
        android:src="@drawable/hotel"
        app:layout_constraintBottom_toTopOf="@id/iconorestaurante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/hotel"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toEndOf="@id/iconohotel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.150" />

    <ImageButton
        android:id="@+id/iconopajaros"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:padding="1dp"
        android:src="@drawable/guacamayo"
        android:onClick="pajaros"
        app:layout_constraintBottom_toTopOf="@id/iconorestaurante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconohotel"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/pajaritos"
        android:layout_width="283dp"
        android:layout_height="87dp"
        android:layout_marginStart="6dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/pajaritos"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iconopajaros"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <ImageButton
        android:id="@+id/iconorestaurante"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:padding="1dp"
        android:src="@drawable/restaurante"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconopajaros"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/restaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/restautante"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1500"
        app:layout_constraintStart_toEndOf="@id/iconorestaurante"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.800" />

</androidx.constraintlayout.widget.ConstraintLayout>